# rust-vm

./: .gitignore  Cargo.toml  Makefile  README.md  aarch64.json  entitlements.plist
crates/vm/: Cargo.toml
crates/vm-bootloader/: Cargo.toml
crates/vm-bootloader/src/: boot_loader.rs  initrd_loader.rs  kernel_loader.rs  lib.rs  linux.rs  utils.rs
crates/vm-bootloader/src/boot_loader/arch/: aarch64.rs  x86_64.rs
crates/vm-bootloader/src/kernel_loader/: error.rs  linux.rs
crates/vm-bootloader/src/kernel_loader/linux/: bzimage.rs  image.rs  x86_64.rs
crates/vm-bootloader/src/linux/: bzimage.rs  image.rs
crates/vm-bootloader/src/utils/: aml.rs
crates/vm-cli/: Cargo.toml
crates/vm-cli/src/: cmd.rs  error.rs  main.rs  term.rs
crates/vm-cli/src/cmd/: device.rs  json.rs
crates/vm-core/: Cargo.toml
crates/vm-core/src/: arch.rs  cpu.rs  debug.rs  device.rs  device_manager.rs  error.rs  firmware.rs  hypervisor.rs  interrupt_manager.rs  irq.rs  layout.rs  lib.rs  mm.rs  monitor.rs  utils.rs  vcpu.rs  virt.rs  virtualization.rs
crates/vm-core/src/arch/: aarch64.rs  irq.rs  layout.rs  registers.rs  vcpu.rs  x86_64.rs
crates/vm-core/src/arch/aarch64/: firmware.rs  irq.rs  layout.rs  register.rs  vcpu.rs  vm_exit.rs
crates/vm-core/src/arch/irq/: error.rs
crates/vm-core/src/arch/layout/: aarch64.rs
crates/vm-core/src/arch/mmu/: aarch64.rs
crates/vm-core/src/arch/registers/: aarch64.rs  x86_64.rs
crates/vm-core/src/arch/vm_exit/: aarch64.rs
crates/vm-core/src/arch/x86_64/: layout.rs  register.rs  vcpu.rs  vm_exit.rs
crates/vm-core/src/cpu/: error.rs  vcpu.rs  vcpu_manager.rs  vm_exit.rs
crates/vm-core/src/cpu/vcpu/: snapshot.rs
crates/vm-core/src/cpu/vcpu_manager/: snapshot.rs
crates/vm-core/src/debug/: gdbstub.rs
crates/vm-core/src/debug/gdbstub/: event_loop.rs  target.rs
crates/vm-core/src/device/: address_space.rs  device_manager.rs  error.rs  mmio.rs  pio.rs  vm_exit.rs
crates/vm-core/src/device/mmio/: layout.rs  mmio_as_manager.rs  (+1 more)
crates/vm-core/src/device_manager/: manager.rs  snapshot.rs  vm_exit.rs
crates/vm-core/src/firmware/: psci.rs
crates/vm-core/src/hypervisor/: hvp.rs  kvm.rs  vcpu.rs  vm.rs
crates/vm-core/src/layout/: aarch64.rs  x86_64.rs
crates/vm-core/src/mm/: allocator.rs  manager.rs  region.rs
crates/vm-core/src/utils/: address_space.rs  bits.rs  fdt.rs
crates/vm-core/src/vcpu/: error.rs  vcpu.rs  vcpu_manager.rs  vm_exit.rs
crates/vm-core/src/virt/: error.rs  hvp.rs  kvm.rs  vcpu.rs  vm.rs  vm_exit.rs
crates/vm-core/src/virtualization/: hvp.rs  hypervisor.rs  irq_allocator.rs  kvm.rs  vcpu.rs  vm.rs
crates/vm-device/: Cargo.toml
crates/vm-device/src/: lib.rs  virtio.rs
crates/vm-device/src/bus/: io_address_space.rs  mod.rs  pio.rs
crates/vm-device/src/device/: cmos.rs  coprocessor.rs  dummy.rs  dummy_pci.rs  gic.rs  gic_v3.rs  i8042.rs  irq.rs  mod.rs  pic.rs  pio.rs  pl011.rs  post_debug.rs  serial.rs  uart16550.rs  uart8250.rs  vga.rs  virtio.rs
crates/vm-device/src/pci/: bridge.rs  bus.rs  configuration_space.rs  device.rs  host_bridge.rs  mod.rs  root_complex.rs  types.rs
crates/vm-device/src/utils/: keyboard.rs
crates/vm-device/src/virtio/: device.rs  transport.rs  types.rs  virtio_input.rs
crates/vm-firmware/: Cargo.toml
crates/vm-firmware/src/: acpi.rs  lib.rs
crates/vm-firmware/src/acpi/: acpi_table.rs  builder.rs  dsdt.rs  error.rs  fadt.rs  madt.rs  rsdp.rs  type.rs  utils.rs  xsdt.rs
crates/vm-firmware/src/apic/: dsdt.rs  fadt.rs  madt.rs  rsdp.rs  xsdt.rs
crates/vm-machine/: Cargo.toml
crates/vm-machine/src/: bootable.rs  device.rs  error.rs  firmware.rs  lib.rs  vm.rs  vm_builder.rs  vmm.rs
crates/vm-machine/src/device/: aarch64.rs  x86_64.rs
crates/vm-machine/src/firmware/: bios.rs
crates/vm-machine/src/kvm/: builder.rs  irq.rs  mod.rs  vcpu.rs
crates/vm-machine/src/utils/: stdin.rs
crates/vm-machine/src/vm/: config.rs  error.rs  vm_exit_handler.rs
crates/vm-pci/: Cargo.toml
crates/vm-pci/src/: bus.rs  device.rs  error.rs  host_bridge.rs  lib.rs  root_complex.rs  root_complex_device.rs  types.rs
crates/vm-pci/src/device/: capability.rs  function.rs  pci_device.rs
crates/vm-pci/src/root_complex/: mmio.rs  mmio_router.rs  pci_root_complex.rs  pio.rs  router.rs
crates/vm-pci/src/root_complex_device/: mmio.rs  pio.rs
crates/vm-pci/src/types/: bar.rs  configuration_space.rs  device.rs  function.rs  interrupt.rs
crates/vm-vfio/: Cargo.toml
crates/vm-vfio/src/: container.rs  device.rs  error.rs  lib.rs  vfio.rs  vfio_pci.rs
crates/vm-vfio/src/vfio/: container.rs  device.rs  linux.rs
crates/vm-vfio/src/vfio_pci/: device.rs  function.rs  interrupt.rs  pci.rs
crates/vm-virtio/: Cargo.toml
crates/vm-virtio/src/: device.rs  lib.rs  result.rs  transport.rs  types.rs  v2.rs  virt_queue.rs  virtqueue.rs
crates/vm-virtio/src/device/: blk.rs  pci.rs  transport.rs  virtqueue.rs
crates/vm-virtio/src/transport/: common.rs  control_register.rs  mmio.rs  pci.rs
crates/vm-virtio/src/types/: device.rs  device_features.rs  device_id.rs  driver_features.rs  interrupt_status.rs  pci.rs  virtqueue.rs
crates/vm-virtio/src/v2/: device.rs  result.rs  transport.rs  types.rs  virt_queue.rs
crates/vm-virtio/src/virt_queue/: virtq_desc_table.rs
crates/vm-virtio/src/virtqueue/: virtq_avail_ring.rs  virtq_desc_table.rs  virtq_used_ring.rs
crates/vm-vmm/: Cargo.toml
crates/vm-vmm/src/: bootloader.rs  device.rs  error.rs  firmware.rs  lib.rs  service.rs  vm.rs  vmm.rs
crates/vm-vmm/src/bootloader/: aarch64.rs  error.rs  x86_64.rs
crates/vm-vmm/src/device/: device_manager.rs  device_manager_v2.rs  error.rs  irq_allocation.rs
crates/vm-vmm/src/service/: gdbstub.rs  monitor.rs
crates/vm-vmm/src/vm/: config.rs  device_builder.rs  snapshot.rs  vm_exit_handler.rs
crates/vm-vmm/src/vmm/: command.rs  error.rs  handler.rs  service.rs
crates/vm/src/: bootable.rs  command.rs  lib.rs  main.rs  mm.rs
crates/vm/src/kvm/: builder.rs  device.rs  irq.rs  loader.rs  mm.rs  mod.rs  vcpu.rs  vm.rs
crates/vm/src/mm/: manager.rs
crates/vm/src/utils/: stdin.rs
(+289 files in other folders)
