[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
applevisor = "1.0.0"
applevisor-sys = "1.0.0"
anyhow = "1.0.100"
bitflags = "2.10.0"
cc = "1.2.51"
clap = { version = "4.5.53", features = ["derive"] }
kvm-bindings = "0.14.0"
kvm-ioctls = "0.24.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
nix = {version = "0.30.1", features = ["ioctl"] }
strum_macros = "0.27.2"
termios = "0.3.3"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
vm-bootloader = { path = "crates/vm-bootloader" }
vm-core = { path = "crates/vm-core" }
vm-device = { path = "crates/vm-device" }
vm-machine = { path = "crates/vm-machine" }
zerocopy = { version = "0.8.33", features = ["derive"] }
