[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.100"
applevisor = "1.0.0"
applevisor-sys = "1.0.0"
async-trait = "0.1.89"
bitflags = "2.10.0"
cc = "1.2.51"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.32"
gdbstub = "0.7.10"
gdbstub_arch = "0.3.3"
kvm-bindings = "0.14.0"
kvm-ioctls = "0.24.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
memmap2 = "0.9.9"
rand = { version = "0.10.0", features = ["std"] }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
static_assertions = "1.1.0"
strum_macros = "0.27.2"
termios = "0.3.3"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
vm-aarch64 = { path = "crates/vm-aarch64" }
vm-bootloader = { path = "crates/vm-bootloader" }
vm-core = { path = "crates/vm-core" }
vm-device = { path = "crates/vm-device" }
vm-fdt = "0.3.0"
vm-mm = { path = "crates/vm-mm" }
vm-pci = { path = "crates/vm-pci" }
vm-snapshot = { path = "crates/vm-snapshot" }
vm-virtio = { path = "crates/vm-virtio" }
vm-vmm = { path = "crates/vm-vmm" }
zerocopy = { version = "0.8.33", features = ["derive"] }
