[package]
name = "vm-bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
vm-core.workspace = true
vm-fdt.workspace = true
vm-mm.workspace = true
zerocopy.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
vm-arch.workspace = true
