[package]
name = "vm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
termios.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vm-bootloader.workspace = true
vm-core.workspace = true
vm-machine.workspace = true

[features]
default = ["kvm"]
kvm = ["vm-core/kvm"]
hvp = ["vm-core/hvp"]
