[package]
name = "vm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
termios.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vm-bootloader.workspace = true
vm-core.workspace = true
vm-device.workspace = true
vm-vmm.workspace = true
