[package]
name = "vm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
applevisor = { workspace = true, optional = true }
applevisor-sys = { workspace = true, optional = true }
anyhow = { workspace = true }
bitflags = { workspace = true }
kvm-bindings = { workspace = true, optional = true }
kvm-ioctls = { workspace = true, optional = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
vm-fdt = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
static_assertions = { workspace = true }
strum_macros = { workspace = true }

[features]
kvm = ["dep:kvm-bindings", "dep:kvm-ioctls"]
hvp = ["dep:applevisor", "dep:applevisor-sys"]
