[package]
name = "vm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
applevisor = { workspace = true, optional = true }
applevisor-sys = { workspace = true, optional = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
gdbstub_arch = { workspace = true }
kvm-bindings = { workspace = true, optional = true }
kvm-ioctls = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
vm-fdt = { workspace = true }
vm-mm = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
vm-aarch64 = { workspace = true }
futures = { workspace = true }
static_assertions = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }

[features]
kvm = ["dep:kvm-bindings", "dep:kvm-ioctls"]
hvp = ["dep:applevisor", "dep:applevisor-sys"]
