[package]
name = "vm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi_tables = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
gdbstub_arch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vm-fdt = { workspace = true }
vm-mm = { workspace = true }
vm-utils = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
strum_macros = { workspace = true }
vm-aarch64 = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
vm-firmware = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { workspace = true }
kvm-ioctls = { workspace = true }
vmm-sys-util = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
applevisor = { workspace = true }
applevisor-sys = { workspace = true }
strum = { workspace = true }
