[package]
name = "vm-device"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags.workspace = true
lazy_static.workspace = true
maplit.workspace = true
thiserror.workspace = true
tracing.workspace = true
vm-core.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
strum_macros.workspace = true
