[package]
name = "vm-device"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bitflags.workspace = true
lazy_static.workspace = true
maplit.workspace = true
serde.workspace = true
serde_json.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
vm-core.workspace = true
vm-fdt.workspace = true
vm-mm.workspace = true
vm-pci.workspace = true
vm-virtio.workspace = true
zerocopy.workspace = true
