[package]
name = "vm-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi_tables = { workspace = true }
thiserror = { workspace = true }
vm-mm = { workspace = true }
vm-utils = { workspace = true }
zerocopy = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
bitflags = { workspace = true }
kvm-bindings = { workspace = true }
