[package]
name = "vm-vfio"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
thiserror = { workspace = true }
vfio-bindings = { workspace = true }
vfio-ioctls = { workspace = true }
vm-core = { workspace = true }
vm-pci = { workspace = true }
vm-utils = { workspace = true }
zerocopy = { workspace = true }
