[package]
name = "vm-vmm"
version = "0.1.0"
edition = "2024"

[dependencies]
gdbstub = { workspace = true }
gdbstub_arch = { workspace = true }
kvm-bindings = { workspace = true, optional = true }
kvm-ioctls = { workspace = true, optional = true }
lazy_static = { workspace = true }
maplit = { workspace = true }
postcard = { workspace = true }
rangemap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vm-bootloader = { workspace = true }
vm-core = { workspace = true }
vm-device = { workspace = true }
vm-mm = { workspace = true }
vm-pci = { workspace = true }
vm-snapshot = { workspace = true }
vm-utils = { workspace = true }
vm-virtio = { workspace = true }
winnow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
vm-vfio = { workspace = true }
