[package]
name = "rust-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
kvm-bindings.workspace = true
kvm-ioctls.workspace = true
lazy_static.workspace = true
maplit.workspace = true
nix.workspace = true
termios.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vm-device.workspace = true
